# env

./: .gitignore  .gitmodules  LICENSE  run.sh
app/: CMakeLists.txt
app/src/: main.cpp
app/src/config/config_generator/: config_generator.cpp
app/src/config/config_parser/: config_parser.cpp
app/src/config_parser/: config.h  config_parser.cpp  config_parser.h
app/src/tui/: tui.cpp  tui.h
config/debian/: config.json  config.toml  dependencies.json  dependencies.toml
env_configurator/src/: main.cpp
env_configurator/src/config/: config.h
env_configurator/src/config/config_generator/: config_generator.cpp  config_generator.h
env_configurator/src/config/config_parser/: config_parser.cpp  config_parser.h
env_configurator/src/tui/: tui.cpp  tui.h
env_generator/app/: .gitignore  index.html  vite.config.ts
env_generator/app/src/: App.css  App.tsx
env_generator/app/src-tauri/: tauri.conf.json
env_generator/app/src/components/button/: Button.tsx  button.module.css
env_generator/app/src/components/menu/: Menu.tsx  menu.module.css
env_generator/app/src/components/theme/: ThemeToggle.module.css  ThemeToggle.tsx
env_generator/app/src/components/theme_toggle/: ThemeToggle.module.css  ThemeToggle.tsx
env_generator/app/src/context/: Theme.tsx
scripts/: build.sh  dependencies.sh  packages_installer.sh  process_generated_config.sh  run.sh  toml_job_runner.sh  utils.sh
